# gossip-analysis

./: README.md  active_validators.json  analysis.py  cluster_data.csv  cluster_data.xlsx  jito_validators.json  log-gossip.sh  sfdp_participants.json  validator_infos.json
analyzer/: Cargo.toml
analyzer/src/: main.rs
webapp/: README.md  compare.html  index.html  package-lock.json  package.json  sybil_analysis_output.json
webapp/src/: App.tsx  main.tsx
webapp/src/components/: IdentityTimeline.tsx  StakeDistribution.tsx  ValidatorPieChart.tsx  ValidatorTable.tsx
webapp/src/types/: validator.ts
