[package]
name = "analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0"
walkdir = "2.3.4"
solana-cli-output = { version = "3.1.2", features = ["agave-unstable-api"] }
clap = { version = "4.4", features = ["derive"] }